Fix: scroll width jiggle on mobile 3

--- a/src/app/components/project-card/project-card.component.scss
+++ b/src/app/components/project-card/project-card.component.scss
@@ -2,6 +2,8 @@
 
 .project-card {
   display: block;
+  margin: 0 auto;
+  width: 90%;
   border-radius: var(--br);
   border: 1px solid var(--accent-hl-clr);
   transition: all 0.3s ease;
